src/objects/Clan_Game__c.object
<CustomObject>
    <description>A record for tracking overall points earned for the linked clan&apos;s clan games event</description>
    <fields>
        <fullName>Clan_Games_Event__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Clan Games Event</label>
        <referenceTo>Clan_Games_Event__c</referenceTo>
        <relationshipLabel>Clan Games</relationshipLabel>
        <relationshipName>Clan_Games</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clan__c</fullName>
        <label>Clan</label>
        <referenceTo>Clan__c</referenceTo>
        <relationshipLabel>Clan Games</relationshipLabel>
        <relationshipName>Clan_Games</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Total_Points__c</fullName>
        <label>Total Points</label>
        <summarizedField>Clan_Game_Contribution__c.Points__c</summarizedField>
        <summaryForeignKey>Clan_Game_Contribution__c.Clan_Game__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Clan Game</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Total_Points__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CG-{0000}</displayFormat>
        <label>Clan Games Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clan Games</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>